syntax = "proto3";

package api;

service ArtistService {
  rpc GetArtistInfo(GetArtistInfoRequest) returns (ArtistInfo) {}
  rpc ListArtists(ListArtistsRequest) returns (ListArtistsResponse) {}
}

message GetArtistInfoRequest {
  string id = 1;
}

message ListArtistsRequest {}

message ListArtistsResponse {
  repeated ArtistInfo artists = 1;
}

message ArtistInfo {
  string id = 1;
  string name = 2;
}

service VenueService {
  rpc GetVenueInfo(GetVenueInfoRequest) returns (VenueInfo) {}
  rpc ListVenues(ListVenuesRequest) returns (ListVenuesResponse) {}
}

message GetVenueInfoRequest {
  string id = 1;
}

message ListVenuesRequest {}

message ListVenuesResponse {
  repeated VenueInfo venues = 1;
}

message VenueInfo {
  string id = 1;
  string name = 2;
  string city = 3;
  string state = 4;
  int32 capacity = 5;
}
